--- a/pages/product.html
+++ b/pages/product.html
@@ -13,51 +13,223 @@
 <body>
 
     <header>
-        <picture>
-            <img src="../image/logo.webp" alt="logo">
-        </picture>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="product.html">Product</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-        <h1>
-            Dassault Rafale
-        </h1>
+        <div class="header">
+            <div class="logo">
+                <img src="../image/logo.webp" width="120px" height="150px">
+            </div>
+            <nav id="nav-bar">
+                <ul id="link">
+                    <li>
+                        <a href="../index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="product.html">Product</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div id="h1Container">
+            <h1>Dassault Rafale</h1>
+
+        </div>
+
     </header>
 
     <main>
-        <section>
-            <div id="container">
-                <div id="items">
-                    <img src="https://c.ndtvimg.com/2021-03/a77648nc_rafale-jets_625x300_31_March_21.jpg" alt="4thgen">
-                    <p>4$ Million</p>
-                    <button type="button">Buy</button>
+
+        <div id="container">
+
+            <div id="items">
+                <div id="itemimg">
+                    <div id="productcontainer">
+                        <img id="productimg"
+                            src="https://c.ndtvimg.com/2021-03/a77648nc_rafale-jets_625x300_31_March_21.jpg" alt="4thgen">
+                        <p id="producttitle">Rafale 4th Generation Model: 4$ Million</p>
+                        <button type="button">Buy</button>
+                    </div>
                 </div>
-                <div id="items">
-                    <img src="https://i.cbc.ca/1.2577713.1395179214!/fileImage/httpImage/image.jpg_gen/derivatives/original_780/dassault-aviation-s-rafale-b-fighter-jet.jpg" alt="4.5thgen">
-                    <p>4.5$ Million</p>
-                    <button type="button">Buy</button>
-                </div>
-                <div id="items">
-                    <img src="https://i.pinimg.com/736x/ca/47/d5/ca47d52b064d5ff882ebde9d52f5f14d--color-lei.jpg" alt="5thgen">
-                    <p>5$ Million</p>
-                    <button type="button">Buy</button>
+                <div id="iteminfo">
+                    <p id="mainp">
+                        The Rafale is a fourth-generation multirole fighter aircraft manufactured by the French company
+                        Dassault Aviation. Some of its key features are:
+                    </p>
+
+                    <ul>
+                        <li>
+                            <span id="bold"></span> The Rafale has a highly maneuverable and stealthy design that makes it
+                            difficult for enemy radar systems to detect and track it.
+                        </li>
+                        <li>
+                            <span id="bold">Multirole capabilities:</span> The Rafale is capable of performing a wide range of missions,
+                            including air superiority, ground attack, reconnaissance, and nuclear deterrence.
+                        </li>
+                        <li>
+                            <span id="bold">Advanced avionics:</span> The Rafale is equipped with advanced avionics, including a highly
+                            sophisticated electronic warfare system, advanced sensors, and a state-of-the-art glass
+                            cockpit.
+                        </li>
+                        <li>
+                            <span id="bold">Precision weapons:</span> The Rafale is equipped with a range of precision-guided weapons,
+                            including air-to-air missiles, air-to-ground missiles, and laser-guided bombs.
+                        </li>
+                        <li>
+                            <span id="bold">High speed and range:</span> The Rafale has a top speed of Mach 1.8 and a combat radius of over
+                            1,000 nautical miles, allowing it to operate effectively in a variety of environments.
+                        </li>
+                        <li>
+                            <span id="bold">Advanced engines:</span> The Rafale is powered by two Snecma M88-2 engines, which provide it with
+                            high thrust-to-weight ratio and excellent performance at high altitudes.
+                        </li>
+                        <li>
+                            <span id="bold">Modular design:</span> The Rafale's modular design allows it to be easily upgraded and adapted to
+                            meet changing mission requirements.
+                        </li>
+                        <li>
+                            <span id="bold">Network-centric capabilities:</span> The Rafale is equipped with advanced networking capabilities,
+                            allowing it to share data with other aircraft and ground stations in real-time.
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </section>
-           
+
+
+
+            <div id="items">
+                <div id="itemimg">
+                    <div id="productcontainer">
+
+                        <img id="productimg"
+                        src="https://i.cbc.ca/1.2577713.1395179214!/fileImage/httpImage/image.jpg_gen/derivatives/original_780/dassault-aviation-s-rafale-b-fighter-jet.jpg"
+                        alt="4.5thgen">
+                        <p id="producttitle">Rafale 4.5th Generation Model: 4.5$ Million </p>
+                        <button type="button">Buy</button>
+                    </div>
+                </div>
+                <div id="iteminfo">
+                    <p id="mainp">
+                        The 4.5th generation of fighter jets is a more advanced version of the fourth-generation jets,
+                        incorporating several new features and technologies. Some of the key features of 4.5th
+                        generation fighter jets are:
+                    </p>
+
+                    <ul>
+                        <li>
+                            <span id="bold">Stealth technology:</span> The 4.5th generation fighter jets have advanced stealth capabilities,
+                            making them harder to detect by enemy radar systems.
+                        </li>
+
+                        <li>
+                            <span id="bold">Advanced sensors and avionics:</span> These fighter jets have advanced sensor and avionics suites,
+                            including active electronically scanned array (AESA) radars, infrared search and track
+                            (IRST) sensors, and helmet-mounted displays (HMDs).
+                        </li>
+
+                        <li>
+                            <span id="bold">Improved data fusion:</span> The 4.5th generation jets have improved data fusion capabilities,
+                            which allow them to process and analyze data from multiple sensors and sources, providing
+                            the pilots with a clearer and more comprehensive picture of the battlespace.
+                        </li>
+
+                        <li>
+                            <span id="bold">Network-centric warfare capabilities:</span> The 4.5th generation fighter jets have advanced
+                            network-centric warfare capabilities, allowing them to share data with other aircraft,
+                            ground stations, and even unmanned aerial vehicles (UAVs) in real-time.
+                        </li>
+
+                        <li>
+                            <span id="bold">Increased weapons loadout:</span> The 4.5th generation fighter jets have increased weapons loadout,
+                            allowing them to carry and deploy a wider range of weapons, including precision-guided
+                            munitions, air-to-air missiles, and air-to-ground missiles.
+                        </li>
+
+                        <li>
+                            <span id="bold">Supercruise capability:</span> These fighter jets have a supercruise capability, which means they
+                            can sustain supersonic flight without the use of afterburners, reducing their infrared
+                            signature and increasing their range.
+                        </li>
+
+                        <li>
+                            <span id="bold">Thrust-vectoring engines:</span> Some 4.5th generation fighter jets are equipped with
+                            thrust-vectoring engines, which allow them to perform advanced maneuvers, including
+                            post-stall maneuvers, making them highly maneuverable and effective in air combat.
+                        </li>
+
+                        <li>
+                            <span id="bold">Improved electronic warfare capabilities:</span> The 4.5th generation fighter jets have advanced
+                            electronic warfare capabilities, including electronic countermeasures (ECM) and electronic
+                            attack (EA) capabilities, making them highly effective in denying or disrupting enemy
+                            communications and radars.
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+
+
+            <div id="items">
+                <div id="itemimg">
+                    <div id="productcontainer">
+
+                        <img id="productimg"
+                        src="https://i.pinimg.com/736x/ca/47/d5/ca47d52b064d5ff882ebde9d52f5f14d--color-lei.jpg"
+                        alt="5thgen">
+                        <p id="producttitle">Rafale F4 Model: 5$ Million</p>
+                        <button type="button">Buy</button>
+                    </div>
+                </div>
+                <div id="iteminfo">
+                    <p id="anotherp">
+                        As of now there is no official 5th generation version of the Rafale fighter jet. The Rafale is a
+                        fourth-generation multirole fighter aircraft manufactured by the French company Dassault
+                        Aviation. However, Dassault Aviation has been working on a potential upgrade to the Rafale,
+                        called the "Rafale F4" standard, which is expected to incorporate some advanced features and
+                        technologies.
+                    </p>
+                    <p id="secondanotherp">
+                        Some of the expected features of the Rafale F4 standard are:
+                    </p>
+                    <ul>
+                        <li>
+                            <span id="bold">Advanced stealth capabilities:</span> The Rafale F4 is expected to have advanced stealth
+                            capabilities, with a new coating that will reduce its radar signature.
+                        </li>
+                        <li>
+                            <span id="bold">Improved sensors and avionics:</span> The Rafale F4 is expected to have improved sensors and
+                            avionics, including a new AESA radar, advanced electronic warfare capabilities, and a new
+                            helmet-mounted display system.
+                        </li>
+                        <li>
+                            <span id="bold">Increased weapons loadout:</span> The Rafale F4 is expected to have an increased weapons loadout,
+                            allowing it to carry and deploy a wider range of weapons, including air-to-air and
+                            air-to-ground missiles, and bombs.
+                        </li>
+                        <li>
+                            <span id="bold">Network-centric warfare capabilities:</span> The Rafale F4 is expected to have advanced
+                            network-centric warfare capabilities, allowing it to share data with other aircraft, ground
+                            stations, and other platforms in real-time.
+                        </li>
+                        <li>
+                            <span id="bold">Advanced propulsion system:</span> The Rafale F4 is expected to have an advanced propulsion system,
+                            with new engines that will provide increased thrust and efficiency.
+                        </li>
+                        <li>
+                            <span id="bold">Artificial intelligence:</span> The Rafale F4 is expected to incorporate artificial intelligence
+                            (AI) technologies, allowing it to perform advanced autonomous operations and support the
+                            pilot in decision-making processes.
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
     </main>
 
     <footer class="site-footer">
