final comit with validated html and css

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
         <header>
             <div class="header">
                 <div class="logo">
-                    <img src="../image/logo.webp" width="120px" height="150px">
+                    <img src="../image/logo.webp" width="120" height="150" alt="logo">
                 </div>
                 <nav id="nav-bar">
                     <ul id="link">
@@ -50,44 +50,44 @@
             <h2>
                 Features
             </h2>
-            <div id="pcontainer">
+            <div class="pcontainer">
                 <p>
                     Dassault Rafale is a French twin-engine multirole fighter aircraft designed and built by Dassault
                     Aviation. It has several advanced features, including:
                 </p>
             </div>
 
-            <div id="licontainer">
-                <ul id="allist">
+            <div class="licontainer">
+                <ul class="allist">
                     <li>
-                        <span id="bold">Multirole capabilities:</span>      
+                        <span class="bold">Multirole capabilities:</span>      
                         The Rafale is designed to perform a variety of missions, including air-to-air combat, ground attack, intelligence gathering, and nuclear deterrence.
                     </li>
 
                     <li>
-                       <span id="bold"> Stealth capabilities:</span> 
+                       <span class="bold"> Stealth capabilities:</span> 
                         The Rafale has a low radar cross-section, making it difficult to detect by enemy radar systems.
                     </li>
 
                     <li>
-                        <span id="bold">Advanced avionics:</span> 
+                        <span class="bold">Advanced avionics:</span> 
                         The Rafale is equipped with a state-of-the-art avionics suite, including a radar system, electronic warfare systems, and a digital flight control system.
                     </li>
 
                     <li>
-                        <span id="bold">Superior maneuverability:</span> The Rafale has excellent maneuverability, allowing it to perform tight turns and high-g maneuvers in combat situations.
+                        <span class="bold">Superior maneuverability:</span> The Rafale has excellent maneuverability, allowing it to perform tight turns and high-g maneuvers in combat situations.
                     </li>
 
                     <li>
-                        <span id="bold">High-performance engines:</span> The Rafale is powered by two Snecma M88 engines, which provide it with a top speed of Mach 1.8 and a maximum altitude of 50,000 feet.
+                        <span class="bold">High-performance engines:</span> The Rafale is powered by two Snecma M88 engines, which provide it with a top speed of Mach 1.8 and a maximum altitude of 50,000 feet.
                     </li>
 
                     <li>
-                        <span id="bold">Armament:</span> The Rafale is equipped with a range of weapons, including missiles, bombs, and 30mm cannon.
+                        <span class="bold">Armament:</span> The Rafale is equipped with a range of weapons, including missiles, bombs, and 30mm cannon.
                     </li>
 
                     <li>
-                        <span id="bold">Upgradability:</span> The Rafale is designed to be easily upgradable, with new technology and weapons systems able to be integrated quickly and efficiently.
+                        <span class="bold">Upgradability:</span> The Rafale is designed to be easily upgradable, with new technology and weapons systems able to be integrated quickly and efficiently.
                     </li>
                 </ul>
 
@@ -99,8 +99,8 @@
                 History
             </h2>
 
-            <div id="licontainer">
-                <ul id="allist">
+            <div class="licontainer">
+                <ul class="allist">
 
                     <li>
                         The Dassault Rafale is a twin-engine, canard-delta wing, multirole fighter aircraft designed and
@@ -147,7 +147,7 @@
             <h2>
                 Reviews
             </h2>
-            <div id="pcontainer">
+            <div class="pcontainer">
                 <p>
                     The Dassault Rafale has received generally positive reviews from pilots and military officials who have
                     flown and operated the aircraft. Here are some of the key strengths and weaknesses of the Rafale, based
@@ -155,31 +155,31 @@
                 </p>
             </div>
 
-            <div id="h3container"><h3>Strengths:</h3></div>
-            <div id="licontainer">
-                <ul id="allist">
+            <div class="h3container"><h3>Strengths:</h3></div>
+            <div class="licontainer">
+                <ul class="allist">
                     <li>
-                        <span id="bold">Versatility:</span> The Rafale is designed to be a multirole fighter aircraft, capable of performing a
+                        <span class="bold">Versatility:</span> The Rafale is designed to be a multirole fighter aircraft, capable of performing a
                         wide range of missions, including air-to-air combat, ground attack, and reconnaissance.
                     </li>
 
                     <li>
-                        <span id="bold">Avionics:</span> The Rafale's advanced avionics suite includes a powerful radar system, a digital
+                        <span class="bold">Avionics:</span> The Rafale's advanced avionics suite includes a powerful radar system, a digital
                         fly-by-wire flight control system, and a range of sensors and communication systems.
                     </li>
 
                     <li>
-                        <span id="bold">Stealth:</span> The Rafale's design incorporates stealth technology to reduce its radar signature and
+                        <span class="bold">Stealth:</span> The Rafale's design incorporates stealth technology to reduce its radar signature and
                         increase its survivability in combat.
                     </li>
 
                     <li>
-                        <span id="bold">Performance:</span> The Rafale is a highly maneuverable aircraft that is capable of flying at high
+                        <span class="bold">Performance:</span> The Rafale is a highly maneuverable aircraft that is capable of flying at high
                         speeds and altitudes.
                     </li>
 
                     <li>
-                        <span id="bold">Weapons:</span> The Rafale is equipped with a wide range of advanced weapons, including air-to-air and
+                        <span class="bold">Weapons:</span> The Rafale is equipped with a wide range of advanced weapons, including air-to-air and
                         air-to-ground missiles, precision-guided munitions, and bombs.
                     </li>
 
@@ -187,22 +187,22 @@
 
             </div>
 
-            <div id="h3container"><h3>Weaknesses:</h3></div>
-            <div id="licontainer">
-                <ul id="allist">
+            <div class="h3container"><h3>Weaknesses:</h3></div>
+            <div class="licontainer">
+                <ul class="allist">
 
                     <li>
-                        <span id="bold">Cost:</span> The Rafale is a relatively expensive aircraft to produce and maintain, which can make it a
+                        <span class="bold">Cost:</span> The Rafale is a relatively expensive aircraft to produce and maintain, which can make it a
                         less attractive option for some countries.
                     </li>
 
                     <li>
-                        <span id="bold">Availability:</span> The Rafale is currently only produced by Dassault Aviation, which can limit
+                        <span class="bold">Availability:</span> The Rafale is currently only produced by Dassault Aviation, which can limit
                         availability and competition in the market.
                     </li>
 
                     <li>
-                        <span id="bold">Maintenance:</span> The advanced technology and complex systems of the Rafale can make maintenance and
+                        <span class="bold">Maintenance:</span> The advanced technology and complex systems of the Rafale can make maintenance and
                         repairs more difficult and time-consuming than with other aircraft.
                     </li>
 
