--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,7 @@
    <header>
     <div class="header">
         <div class="logo">
-            <img src="../image/logo.webp" width="120px" height="150px">
+            <img src="../image/logo.webp" width="120" height="150" alt="logo">
         </div>
         <nav id="nav-bar">
             <ul id="link">
@@ -41,7 +41,7 @@
 
     <main>
         <div class="formContainer">
-            <form action="./thanks.html" netlify>
+            <form action="./thanks.html">
                 <fieldset>
 
                     <legend>Enter Your Details</legend>
@@ -50,12 +50,12 @@
 
                         <p>
                             <label for="name">Full Name:-</label>
-                            <input type="text" name="name" id="name" required maxlength="20" minlength="1"
+                            <input type="text" name="name" id="name" 
                                 placeholder="Enter Your Name">
                         </p>
                         <p>
-                            <label for="contact">Mobile Number:-</label>
-                            <input type="number" name="mobileNumber" id="mobileNumber" required maxlength="20" minlength="1"
+                            <label for="mobileNumber">Mobile Number:-</label>
+                            <input type="number" name="mobileNumber" id="mobileNumber" 
                                 placeholder="XXX-XXX-XXXX">
                         </p>
                         <p>
